# sphinxcontrib-serializinghtml

./: .gitignore  CHANGES  CHANGES.rst  MANIFEST.in  Makefile  README.rst  babel.cfg  pyproject.toml  release-checklist.rst  setup.cfg  setup.py  tox.ini
.github/: transifex.yml
.github/workflows/: create-release.yml  test.yml  transifex.yml
sphinxcontrib/: __init__.py
sphinxcontrib/serializinghtml/: __init__.py  jsonimpl.py  version.py
tests/: test_serializinghtml.py
tests/roots/test-basic/: index.rst
