[build-system]
requires = ["flit_core>=3.7"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "sphinxcontrib-serializinghtml"
description = """sphinxcontrib-serializinghtml is a sphinx extension which \
outputs "serialized" HTML files (json and pickle)"""
readme = "README.rst"
urls.Changelog = "https://www.sphinx-doc.org/en/master/changes.html"
urls.Code = "https://github.com/sphinx-doc/sphinxcontrib-serializinghtml"
urls.Download = "https://pypi.org/project/sphinxcontrib-serializinghtml/"
urls.Homepage = "https://www.sphinx-doc.org/"
urls."Issue tracker" = "https://github.com/sphinx-doc/sphinx/issues"
license.text = "BSD-2-Clause"
requires-python = ">=3.9"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "Sphinx>=5",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
lint = [
    "flake8",
    "mypy",
    "docutils-stubs",
]

[[project.authors]]
name = "Georg Brandl"
email = "georg@python.org"

[tool.flit.module]
name = "sphinxcontrib.serializinghtml"

[tool.flit.sdist]
include = [
    "CHANGES",
    "LICENSE",
    # Tests
    "tests/",
    "tox.ini",
]
exclude = [
    "doc/_build",
]

[tool.mypy]
ignore_missing_imports = true
