[build-system]
requires = ["flit_core>=3.7"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "sphinxcontrib-serializinghtml"
description = """sphinxcontrib-serializinghtml is a sphinx extension which \
outputs "serialized" HTML files (json and pickle)"""
readme = "README.rst"
urls.Changelog = "https://github.com/sphinx-doc/sphinxcontrib-serializinghtml/blob/master/CHANGES.rst"
urls.Code = "https://github.com/sphinx-doc/sphinxcontrib-serializinghtml/"
urls.Download = "https://pypi.org/project/sphinxcontrib-serializinghtml/"
urls.Homepage = "https://www.sphinx-doc.org/"
urls."Issue tracker" = "https://github.com/sphinx-doc/sphinx/issues/"
license.text = "BSD-2-Clause"
requires-python = ">=3.9"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
lint = [
    "ruff==0.5.5",
    "mypy",
    "types-docutils",
]
standalone = [
    "Sphinx>=5",
]

[[project.authors]]
name = "Georg Brandl"
email = "georg@python.org"

[tool.flit.module]
name = "sphinxcontrib.serializinghtml"

[tool.flit.sdist]
include = [
    "CHANGES.rst",
    "LICENCE.rst",
    # Tests
    "tests/",
    "tox.ini",
]
exclude = [
    "doc/_build",
]

[tool.mypy]
python_version = "3.9"
packages = [
    "sphinxcontrib",
    "tests",
]
exclude = [
    "tests/roots",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
extra_checks = true
no_implicit_reexport = true
show_column_numbers = true
show_error_context = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "type-arg",
    "redundant-self",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
]
